--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 :root{
     --very-ligth-violet:#DCD6F7;
     --very-dark-violet:#73566B;
+    --very-dark-violet-ligther:#96748C;
     --very-dark-blue:#313d5a;
     --violet :#B4869F;
 }
