add Testimonials section

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 :root{
-    --very-ligth-violet:#DCD6F7;
+    --very-ligth-violet:#CFC0CB;
     --very-dark-violet:#73566B;
     --very-dark-violet-ligther:#96748C;
     --very-dark-blue:#313d5a;
