--- a/src/components/TestimonialsSection/TestimonialsSection.css
+++ b/src/components/TestimonialsSection/TestimonialsSection.css
@@ -1,4 +1,6 @@
 .TestimonialsContant{
+    position: relative;
+    top:-5px;
     background-color: var(--very-dark-blue);
 }
 .TestimonialsContant h1{
