--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -21,7 +21,7 @@
 .hero-content p{
     color: var(--very-dark-blue);
 }
-.hero-section span{
+.hero-section .my-name{
     color:var(--violet);
     text-shadow: 1px;    
 }
@@ -50,3 +50,34 @@
     translate: 0px 10px;
     transition-duration: 0.5s;
 }
+
+.title-fade-out {
+    opacity: 0;
+    animation-name: fade-out;
+    animation-duration: 2s;
+}
+
+.title-fade-in {
+    opacity: 100;
+    animation-name: fade-in;
+    animation-duration: 2s;
+}
+
+@keyframes fade-out {
+    from {
+        opacity: 100;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
+@keyframes fade-in {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 100;
+    }
+}
+
